project(WEBSOCKET_LITE_Test)


if(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /wd4100")
else()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
endif()

set(${PROJECT_NAME}_EXAMPLE_SRC 
	main.cpp
)

add_definitions(
	-DTEST_CERTIFICATE_PRIVATE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../Test/private.key"
	-DTEST_CERTIFICATE_PUBLIC_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../Test/public.crt"
	-DTEST_DH_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../Test/dh.key"
	-DTEST_CERTIFICATE_PRIVATE_PASSWORD="Test pass"
	-DTEST_FUZZING_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../Test/wssfuzzingclient.json"
)

include_directories(${WEBSOCKET_LITE_INCLUDE_DIRS})

add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_EXAMPLE_SRC} ${${PROJECT_NAME}_PLATFORM_SRC})
target_link_libraries(${PROJECT_NAME} ${WEBSOCKET_LITE_LIBS} )

add_test (NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
